# american_indian_entrepreneurs

./: .gitignore  Makefile  RATE_LIMITING_FIXES.md  Readme.md  ceo_fetch.py  nasdaq_screener_1697577859701673000.xlsx  nasdaq_screener_1756581542831612000.csv  nasdaq_screener_with_indian_ceos.csv  phased_approach.py  pyproject.toml  requirements.txt  run.py  setup.py  test_rate_limiting.py
archive/: ceo_with_indian_origin_llama8b.csv  ceo_with_indian_origin_qwen38b.csv  fetch_company_details.py  fetch_ticker.py  gfinance_selenium.py  main.py  names_match.py  nasdaq_screener.csv  phased_approach.py  run.py
archive/a1_run_fetch_py/: fetch_company_details.py  run.py
archive/a3_getceoname_opencorporates/: PublicCompaniesMay2025_main.csv  update_ceo_data.py
archive/a4_deepseek_api/: update_rem_ceo.py
archive/a5_ml/: llamacpp.py  local_model.py
crawl4ai/: demo.py
input/: PublicCEOsList_010925_0823.csv
ml/: download_model.py  ollama_api.py
output/: nasdaq_screener_20250820_095148.csv  nasdaq_screener_20250901_005819.csv
src/: __init__.py  fetch_company_details.py  run.py  run_asyncio.py
src/fetchers/: __init__.py  company_details_fetcher.py
src/http/: __init__.py  http_client.py
src/models/: company_details.py
src/scrapers/: __init__.py  base.py  cnbc.py  cnn_money.py  google_finance.py  marketwatch.py  yahoo_finance.py
tests/: .coverage  test_refactored_code.py
