[project]
name = "american-indian-entrepreneurs"
version = "1.0.0"
description = "A comprehensive, object-oriented web scraping tool for gathering company information from financial websites"
readme = "Readme.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "American Indian Entrepreneurs Team"}
]
keywords = ["web-scraping", "finance", "company-data", "stock-market", "data-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core web scraping and data processing
    "beautifulsoup4>=4.12.0",
    "Faker>=20.0.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "openpyxl>=3.1.0",
    
    # Progress tracking and utilities
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
# Optional dependencies for advanced features
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

ml = [
    "yfinance>=0.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "llama_cpp_python>=0.2.0",
]

async = [
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
]

browser = [
    "selenium>=4.10.0",
    "webdriver-manager>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/american-indian-entrepreneurs"
Repository = "https://github.com/your-username/american-indian-entrepreneurs"
Documentation = "https://github.com/your-username/american-indian-entrepreneurs#readme"
Issues = "https://github.com/your-username/american-indian-entrepreneurs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
] 