[project]
name = "american-indian-entrepreneurs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crawl4ai>=0.6.3",
    "faker>=37.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "requests>=2.32.4",
] 
